# Testing_Project

./: Dockerfile  brigade.js  config.yml  conftest.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: python-app.yml  test.yml  test_docker.yml  testing_vishnu.yml
Data/: cred.py
Libraries/: apple.py  github.py
Output/: mail.py
Tests/: sample2.py  test_abcd.py  test_basic_fixture.py  test_bigbasket.py  test_browse.py  test_codespace.py  test_compare.py  test_configuration.py  test_copy_code.py  test_depend.py  test_div_by_3_6.py  test_get5.py  test_github.py  test_login.py  test_open_codespace.py  test_panimalar.py  test_paramas.py  test_paste_code.py  test_put.py  test_results.xml  test_sign_in.py  test_skipif.py  test_square.py  test_wallet.py  test_yield_fix.py
