[tool.poetry]
name = "Testing_Project"
version = "0.1.0"
description = "A simple Python project with many packages"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10.16"
requests = "^2.31"
numpy = "^1.24"
pandas = "^2.0"
flask = "^2.3"
matplotlib = "^3.7"
sqlalchemy = "^2.0"
scikit-learn = "^1.3"
beautifulsoup4 = "^4.12"
pillow = "^9.5"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^6.0.0"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
