[tool.poetry]
name = "Testing_Project"
version = "0.1.0"
description = "A simple Python project with many packages"

# Disable package mode (if you don't want to install your project)
package-mode = false

[tool.poetry.dependencies]
python = "^3.10.16"
numpy = "^1.24"
pandas = "^2.0"
flask = "^2.3"
matplotlib = "^3.7"
sqlalchemy = "^2.0"
scikit-learn = "^1.3"
beautifulsoup4 = "^4.12"
pillow = "^9.5"
pytest = "^8.3.4"
playwright = "^1.49.1"
allure-pytest = "^2.13.5"
allure-python-commons = "^2.13.5"
requests = "^2.32.3"
atlassian-python-api = "^3.41.19"
beautifulsoup4 = "^4.12.3"
click = "^8.1.8"
tenacity = "^9.0.0"
pyvmomi = "^8.0.3.0.1"
openpyxl = "^3.1.5"


[tool.poetry.dev-dependencies]
autoflake = "^2.3.1"
black = "^25.1.0"
isort = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
